--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,19 @@ _site
 Gemfile.lock
 node_modules/
 vendor
+
+
+.ipynb_checkpoints
+*/.ipynb_checkpoints
+*/*/.ipynb_checkpoints
+*/*/*/.ipynb_checkpoints
+*/*/*/*/.ipynb_checkpoints
+*/*/*/*/*/.ipynb_checkpoints
+
+
+.ipynb_checkpoints/*
+*/.ipynb_checkpoints/*
+*/*/.ipynb_checkpoints/*
+*/*/*/.ipynb_checkpoints/*
+*/*/*/*/.ipynb_checkpoints/*
+*/*/*/*/*/.ipynb_checkpoints/*
