--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,8 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - bryanwilie
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - bryanwilie/pick
+  - IndoNLP/indonlu
+  - IndoNLP/indonlg
+  - IndoNLP/nusa-crowd
