fix about and add repo

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,8 +1,11 @@
 github_users:
   - bryanwilie
+  - HLTCHKUST
+  - IndoNLP
 
 github_repos:
   - bryanwilie/pick
+  - HLTCHKUST/chatgpt-evaluation
   - IndoNLP/indonlu
   - IndoNLP/indonlg
   - IndoNLP/nusa-crowd
